Update and rename first_templates_result.html to first_templates_first_result.html

--- a/first_templates_first_result.html
+++ b/first_templates_first_result.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">  <!-- 파이참에서 en 영어보다 ko 한국어로 바꿔주자. -->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
