--- a/first_templates_first_select.html
+++ b/first_templates_first_select.html
@@ -11,7 +11,7 @@
 </form>
 {% endblock %}
 
-<!-- block 사이에 주석을 밑의 내용처럼 길게 넣으면 이상하게 에러가 난다. -->
+<!-- block 사이에 주석을 밑의 내용처럼 문단으로 길게 넣으면 이상하게 에러가 난다. -->
     <!--
     - 원래 body 태그안에 적었던거 -
     <p>
