--- a/second_templates_second_create.html
+++ b/second_templates_second_create.html
@@ -1,4 +1,4 @@
-<form action="{% url 'confirm' %}" method="post">  <!-- 일단 입력받은 데이터를 처리하는 코드는 지금 다루진 않을 것이라 action에는 루트경로 ("/")로 지정했었음. 지금은 변경했음. -->
+<form action="{% url 'create' %}" method="post">  <!-- 일단 입력받은 데이터를 처리하는 코드는 지금 다루진 않을 것이라 action에는 루트경로 ("/")로 지정했었음. 지금은 변경했음. -->
     {% csrf_token %}  <!-- csrf_token 은 각각에 서로 다른 토큰을 부여하고, 토큰이 다시 서버로 제출되었을때, 유효한 요청인지 검증하기 위해 사용한다. -->
     <table>
         {{ form.as_table }}  <!-- views.py에서 렌더링받은 '겉 폼 양식 변수'로 겉 폼 양식을 출력하는 구문이다. -->
