--- a/second_templates_second_create.html
+++ b/second_templates_second_create.html
@@ -2,6 +2,11 @@
     {% csrf_token %}  <!-- csrf_token 은 각각에 서로 다른 토큰을 부여하고, 토큰이 다시 서버로 제출되었을때, 유효한 요청인지 검증하기 위해 사용한다. -->
     <table>
         {{ form.as_table }}  <!-- views.py에서 렌더링받은 '겉 폼 양식 변수'로 겉 폼 양식을 출력하는 구문이다. -->
+                             <!-- 특정 데이터 하나를 하나의 레코드라고 부르고, 테이블은 여러 레코드의 집합이다.
+                             여기서 레코드는 forms.py 파일의 모델폼의 각 여러 속성 및 데이터이고,
+                             이러한 데이터들의 집합인 테이블을 갖고와서, 겉폼 양식을 {{ form.as_table }} 로 불러온것이다.
+                             {{ form.as_table }} 안에는 tr등등이 함축된 코드이므로, <table></table> 태그 안에 적어야 효과가 있다.
+                             참고로 {{ form.as_table }}에서의 form은, 렌더링할때 직접 지은 이름이므로 고유 키워드명이 아니라는것에 명심하고 헷갈리지 말자. -->
     </table>
     <button type="submit">제출</button>  <!-- "submit"는 해당 버튼이 폼 데이터(form data)를 제출하는 제출 버튼(submit button)임을 명시한다. -->
 </form>
