--- a/third_templates_third_detail.html
+++ b/third_templates_third_detail.html
@@ -13,6 +13,21 @@
                     <button class="btn btn-danger">삭제하기</button>
                 </a>
             </p>
+            <hr/>
+            <p>
+                <a href="{% url 'review-create' restaurant_id=item.id %}">
+                    <button class="btn btn-info">리뷰쓰기</button>
+                </a>
+            </p>
+            {% for review in reviews %}
+                리뷰: {{ review.comment }}, 평점: {{ review.point }}점
+            {% endfor %}
+            <!--
+                filter로 하나의 리뷰 데이터만 불러왔는데 왜 for문을 쓰는가 하고 어렵게 생각하지말고,
+                first 웹앱의 models.py 파일의 POST 모델클래스도 마찬가지였던 것처럼, 그저 원래 렌더링해온 데이터베이스를 불러올때 
+                for문으로 렌더링해온 데이터베이스의 내부값을 쭈우욱 여러개 전부 출력해주는게 맞지만, 그걸 filter로 한가지데이터로만 국한되게 제한시켜서 하나만 출력시킨거라 생각하면 편하다.
+                그니까 .all()로 렌더링해온 데이터베이스 사용할때는 for문은 무조건 똑같이 써야하되, 그걸 렌더링해서 줄때 filter로 특정 데이터로 제한시켜서 보냈는가 아닌가에 초점을 맞춰서 생각하면 되는 것이다.
+            -->
         </div>
     </div>
 </div>
